--- a/package.json
+++ b/package.json
@@ -27,5 +27,21 @@
     "multer": "^1.4.2",
     "startbootstrap-sb-admin-2": "^4.0.7",
     "superheroes": "^3.0.0"
-  }
+  },
+  "description": "<h2 align=\"center\">Kelas Online Premium</h2>",
+  "main": "app.js",
+  "directories": {
+    "test": "test"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ansyrllah/staycation.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ansyrllah/staycation/issues"
+  },
+  "homepage": "https://github.com/ansyrllah/staycation#readme"
 }
